# elide

./: .bazelproject  .bazelrc  .claude.md  .editorconfig  .env  .eslintrc.js  .gitattributes  .gitconfig  .gitignore  .gitmodules  .licrc  .mcp.json  .npmrc  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .release  .rustfmt.toml  .snyk  .version  .yarnrc  BUILD.bazel  CHANGELOG.md  COMMIT_MSG.txt  COMPATIBILITY_MATRIX.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_SUMMARY.md  ELIDE_OSS_CONVERSION_STRATEGY.md  JAVA_HOME_DETECTION_FIX.md  LICENSE  LICENSES.txt  MODULE.bazel  Makefile  NOTICE.txt  PR_BODY.md  PklProject  PklProject.deps.json  README.md  WORKSPACE  (+41 more)
.cargo/: config.aarch64.toml  config.android-x86_64.toml  config.arm64.toml  config.clang-arm64.toml  config.clang-musl-x86_64.toml  config.clang-x86_64.toml  config.macos-aarch64.toml  config.macos-arm64.toml  config.macos-x86_64.toml  config.musl-x86-64.toml  config.native-x86_64.toml  config.nightly.toml  config.pgo.toml  config.profiler-x86_64.toml  config.toml  config.x86_64.toml  sccache.toml
.claude/: settings.local.json
.dev/: CLAUDE.md
.devcontainer/: Dockerfile  README.md  devcontainer.json  elide.devcontainer.json  init.gradle.kts
.github/: AUTHORS.md  CLA.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DCO.md  (+16 more)
crates/base/: Cargo.inert  Cargo.toml  build.rs
crates/base/src/: b64.rs  crc.rs  lib.rs  prelude.rs
crates/colide/: Cargo.toml  build.rs
crates/colide/src/: ai.rs  exec.rs  filesystem.rs  hw.rs  keyboard.rs  lib.rs  mouse.rs  vesa.rs
crates/colide/src/llm/: gguf.rs  inference.rs  memory.rs  mod.rs  quantization.rs
crates/colide/src/net/: aes.rs  aggregation.rs  ap.rs  arp.rs  bridge.rs  cfg80211.rs  connection.rs  dhcp.rs  dns.rs  eap.rs  firmware.rs  http.rs  ieee80211.rs  ipv6.rs  linux_compat.rs  mac80211.rs  mesh.rs  mod.rs  monitor.rs  nl80211.rs  p2p.rs  power.rs  qos.rs  rate_control.rs  regulatory.rs  roaming.rs  scan.rs  stack.rs  tcp.rs  tls.rs  udp.rs  usb.rs  websocket.rs  wifi.rs  wpa.rs  wps.rs
crates/colide/src/net/drivers/: iwlwifi.rs  mod.rs  mt7601u.rs  rtl8188eu.rs  traits.rs
crates/colide/src/pcie/: config.rs  device.rs  dma.rs  mmio.rs  mod.rs  msi.rs
crates/colide/src/storage/: ahci.rs  ata.rs  block.rs  fat32.rs  mod.rs
crates/colide/src/usb/: hid.rs  host.rs  mass_storage.rs  mod.rs
crates/dns/: Cargo.toml
crates/dns/src/: lib.rs
crates/entry/: Cargo.toml  build.rs  test.c
crates/entry/headers/: elide-entry.h  graal_isolate_dynamic.h  libelidemain.h  libelidemain_dynamic.h  libentry.h  libentry_dynamic.h
crates/entry/src/: lib.rs
crates/js/: Cargo.toml
crates/js/src/: codegen.rs  lib.rs  precompiler.rs
crates/local-ai/: Cargo.toml  build.rs
crates/local-ai/src/: aimodel.rs  blocking.rs  cli.rs  lib.rs  main.rs  threaded.rs
crates/sqlite/: Cargo.toml  build.rs
crates/sqlite/headers/: NativeDB.h
crates/sqlite/src/: NativeDB.c  lib.rs
crates/substrate/: Cargo.toml  build.rs
crates/substrate/headers/: elide-plugin.h  graal_isolate.h  substrate.h
crates/substrate/src/: lib.rs  vm.rs
crates/terminal/: Cargo.toml  build.rs
crates/terminal/headers/: jansi.h  jansi_structs.h  jlinenative.h
crates/terminal/src/: clibrary.c  jansi.c  jansi_isatty.c  jansi_structs.c  jansi_ttyname.c  jlinenative.c  kernel32.c  lib.rs  terminaljni.c
crates/trace/: Cargo.toml  build.rs
crates/trace/src/: channel.rs  lib.rs  ringbuf.rs
crates/transport/: Cargo.toml  build.rs
crates/transport/headers/: bb.h  cert_compress.h  error.h  io_uring.h  native_constants.h  netty_epoll_linuxsocket.h  netty_epoll_vmsocket.h  netty_io_uring.h  netty_io_uring_linuxsocket.h  netty_jni_util.h  netty_kqueue_bsdsocket.h  netty_kqueue_eventarray.h  netty_unix.h  netty_unix_buffer.h  netty_unix_errors.h  netty_unix_filedescriptor.h  netty_unix_jni.h  netty_unix_limits.h  netty_unix_socket.h  netty_unix_util.h  ssl.h  ssl_private.h  sslcontext.h  sslsession.h  syscall.h  tcn.h
crates/transport/src/: bb.c  cert_compress.c  error.c  jnilib.c  lib.rs  native_constants.c  netty_epoll_linuxsocket.c  netty_epoll_native.c  netty_io_uring_linuxsocket.c  netty_io_uring_native.c  netty_jni_util.c  netty_kqueue_bsdsocket.c  netty_kqueue_eventarray.c  netty_kqueue_native.c  netty_unix.c  netty_unix_buffer.c  netty_unix_errors.c  netty_unix_filedescriptor.c  netty_unix_limits.c  netty_unix_socket.c  netty_unix_util.c  ssl.c  sslcontext.c  sslsession.c  sslutils.c  syscall.c
crates/web/: Cargo.toml
crates/web/src/: browsers.rs  css.rs  html.rs  lib.rs  md.rs
elide/java/: BUILD.bazel  HelloWorld.java
elide/runtime/js/: BUILD.bazel  MANIFEST.MF  config.bzl  entrypoint.js  intrinsics.externs.js  tsconfig.runtime.json
elide/runtime/js/bridge/: BUILD.bazel  jserror.ts
elide/runtime/js/intrinsics/: BUILD.bazel  base.ts  base64.ts  console.ts  primordials.ts
elide/runtime/js/intrinsics/blob/: BUILD.bazel  Blob.ts  index.ts
elide/runtime/js/intrinsics/err/: BUILD.bazel  ValueError.ts  index.ts
elide/runtime/js/intrinsics/url/: BUILD.bazel  IURL.ts  IURLSearchParams.ts  URL.ts  URLSearchParams.ts  index.ts
elide/runtime/js/modules/buffer/: BUILD.bazel  buffer.ts  index.ts  package.json
elide/runtime/js/modules/fs/: BUILD.bazel  fs.ts  index.ts  package.json
elide/runtime/js/polyfills/: BUILD.bazel  abort-controller.js  base64.js  buffer.js  esbuild.config.js  event-target.js  ieee754.js  once.js  polyfills.js  readable-stream.mjs  textencoder.js
elide/runtime/js/tools/: BUILD.bazel  esbuild.config.js
rng/: BUILD.bazel  Cargo.toml
rng/src/: lib.rs  main.rs
samples/js/: BUILD.bazel  HelloGuava.java  HelloWorld.java  app.js  hello.js  wasm.js
samples/project/: BUILD.bazel  build.gradle.kts  settings.gradle.kts
samples/project/src/main/java/: HelloWorld.java
tools/defs/tsc/compiler/: BUILD.bazel
tools/gradle/: BUILD.bazel  GradleToolRunner.java  defs.bzl
tools/platform/: BUILD.bazel
tools/umbrella/: Cargo.toml  build.rs  cbindgen.toml
tools/umbrella/src/: diagnostics.rs  lib.rs  nativetransport.rs  tools.rs
(+4604 files in other folders)
