package(
    default_visibility = ["//visibility:public"],
)

load("@npm//:defs.bzl", "npm_link_all_packages")
load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/elide-dev/elide

npm_link_all_packages(name = "node_modules")

gazelle(name = "gazelle")

exports_files([
    ".cargo/config.toml",
    "Cargo.toml",
    "Cargo.lock",
    "Cargo.Bazel.lock",
])
