package(
    default_visibility = ["//visibility:public"],
)

load("@npm//:defs.bzl", "npm_link_all_packages")
load("@gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")

npm_link_all_packages(name = "node_modules")

# gazelle:prefix github.com/elide-dev/runtime
# gazelle:java_maven_install_file maven_install.json

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_bin",
)

exports_files([
    ".cargo/config.toml",
    "Cargo.toml",
    "Cargo.lock",
    "Cargo.Bazel.lock",
])

gazelle_binary(
    name = "gazelle_bin",
    languages = DEFAULT_LANGUAGES + [
        "@contrib_rules_jvm//java/gazelle",
    ],
)
