#
# Copyright (c) 2024-2025 Elide Technologies, Inc.
#
# Licensed under the MIT license (the "License"); you may not use this file except in compliance
# with the License. You may obtain a copy of the License at
#
# https://opensource.org/license/mit/
#
# Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
# an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under the License.
#

# Nightly:
# cargo-features = ["metabuild", "profile-rustflags", "codegen-backend"]

[workspace]
resolver = "2"
members = ["crates/*", "tools/umbrella"]

exclude = ["crates/build", "crates/transport", "third_party", "runtime", "crates/entry"]

[workspace.package]
license = "MIT"
edition = "2024"
rust-version = "1.88.0"
version = "1.0.0-beta7"
authors = ["Elide Technologies, Inc."]
homepage = "https://elide.dev"
documentation = "https://docs.elide.dev"
repository = "https://github.com/elide-dev/elide"

[profile.dev]
opt-level = 0
lto = false
strip = false
debug = true
incremental = true

[profile.release]
opt-level = 3
lto = true
strip = "debuginfo"
debug = true
incremental = false
panic = 'abort'
codegen-units = 1

[profile.release.package.diag]
opt-level = "s"

[profile.release.package.local-ai]
opt-level = "s"

[profile.dev.package.builder]
opt-level = 3
debug = true
incremental = true
overflow-checks = false

[patch.crates-io]
## Version Pins / Overrides
async-std = { git = "https://github.com/elide-tools/async-std", rev = "33f56cce1777319a2c64cac35660f7991262d00c" }
ssri = { git = "https://github.com/elide-tools/ssri-rs", rev = "57b5790f8d114f5b31a716a81dee6f37c0f96c3e" }
jni = { git = "https://github.com/elide-tools/jni-rs", rev = "52526ede7ff165632bfd44259a10d0ac77d60e96" }

[workspace.dependencies]
## Local
builder = { path = "crates/builder" }
diag = { path = "crates/diag" }
substrate = { path = "crates/substrate" }
trace = { path = "crates/trace" }
exec = { path = "crates/exec" }
umbrella = { path = "tools/umbrella" }

## Dependencies
lazy_static = { version = "1.5.0" }
anyhow = { version = "1.0.97" }
llama-cpp-2 = { version = "0.1.102", default-features = false }
bindgen = { version = "0.72.0" }
build_const = { version = "0.2.2", default-features = false }
bumpalo = { version = "3.17.0" }
encoding_rs = { version = "0.8.35" }
cc = { version = "1.2.15", features = ["parallel"] }
clap = { version = "4.5.30", features = ["derive"] }
console-subscriber = { version = "0.4.1" }
hf-hub = { version = "0.4.2" }
java_native = { git = "https://github.com/elide-tools/jni-macros", rev = "7dc95cc2d7534761d0b16899dcda9e7729bdb89d" }
jni = { version = "0.21.1", default-features = false, features = [] }
jni-sys = { version = "0.4.0" }
libloading = { version = "0.8.6" }
miette = { version = "7.5.0", features = ["fancy"] }
mimalloc = { version = "0.1.43" }
orogene = { git = "https://github.com/elide-dev/orogene", rev = "1122f0884f8c6e726ac36dbd926a5102ce2fa950", default-features = false, features = [
  "mimalloc",
] }
rustc_version = { version = "0.4.1" }
rustix = { version = "1.0.2", features = ["process"] }
serde = { version = "1.0.218", default-features = false }
sysinfo = { version = "0.36.0" }
once_cell = { version = "1.21.3" }
tikv-jemallocator = { version = "0.6.0", default-features = false, features = ["disable_initial_exec_tls"] }
log = { version = "0.4.27" }
tracing = { version = "0.1.41" }
tracing-core = { version = "0.1.33" }
tracing-log = { version = "0.2.0" }
tracing-futures = { version = "0.2.5" }
tracing-serde = { version = "0.2.0" }
tracing-attributes = { version = "0.1.28" }
tracing-subscriber = { version = "0.3.19" }
tokio = { version = "1", default-features = false, features = [
  "fs",
  "io-util",
  "io-std",
  "macros",
  "process",
  "rt-multi-thread",
  "sync",
  "signal",
  "signal-hook-registry",
  "tracing",
] }

toml = { version = "0.8.20", default-features = false }
typeshare = { version = "1.0.4" }

## Oxc
oxc = { git = "https://github.com/elide-dev/oxc", rev = "29516454d52d2197f9332b39162d27c913f31af6", default-features = false, features = [
  "full",
  "isolated_declarations",
  "mangler",
  "minifier",
] }

## Uv
uv = { git = "https://github.com/elide-dev/uv", rev = "43dbdba578179d8e6ced763916b658dcfb9c53c6" }

## Ruff
ruff = { git = "https://github.com/elide-dev/ruff", rev = "08bc6d25899501d690c37a87d6da51951280dfc5" }
