module(name = "elide", version = "1.0.0")

bazel_dep(name = "rules_jvm_external", version = "5.3")


#
# `rules_jvm_external`
#

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.artifact(
    artifact = "guava",
    group = "com.google.guava",
    version = "31.1-jre",
)

maven.install(
    artifacts = [
        "org.seleniumhq.selenium:selenium-java:4.4.0",
    ],
    lock_file = "//:maven_install.json",
)

use_repo(
    maven,
    "maven",
    "unpinned_maven",
)

