module(name = "elide", version = "1.0.0")

##
## Module Dependencies
##

bazel_dep(name = "platforms", version = "0.0.6")

## Dependencies: Core
bazel_dep(name = "rules_apple", version = "2.4.1")
bazel_dep(name = "rules_cc", version = "0.0.6")
bazel_dep(name = "rules_foreign_cc", version = "0.9.0")
bazel_dep(name = "rules_go", version = "0.41.0")
bazel_dep(name = "rules_java", version = "6.2.2")
bazel_dep(name = "rules_jni", version = "0.7.0")
bazel_dep(name = "rules_jvm_external", version = "5.3")
bazel_dep(name = "rules_license", version = "0.0.7")
bazel_dep(name = "rules_oci", version = "1.2.0")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
bazel_dep(name = "rules_pkg", version = "0.9.1")
bazel_dep(name = "rules_python", version = "0.24.0")
bazel_dep(name = "rules_sh", version = "0.3.0")
bazel_dep(name = "rules_swift", version = "1.9.1")
bazel_dep(name = "contrib_rules_jvm", version = "0.13.0")

## Dependencies: Aspect
bazel_dep(name = "aspect_bazel_lib",  version = "1.32.1")
bazel_dep(name = "aspect_rules_js",  version = "1.30.0")
bazel_dep(name = "aspect_rules_esbuild", version = "0.15.0")
bazel_dep(name = "aspect_rules_jest", version = "0.19.5")
bazel_dep(name = "aspect_rules_ts",  version = "1.4.5")

## Dependencies: Gazelle
bazel_dep(name = "gazelle", version = "0.32.0")
bazel_dep(name = "rules_python_gazelle_plugin", version = "0.24.0")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.4.2")

## Dependencies: Bazel
bazel_dep(name = "bazel_features", version = "0.0.1")
bazel_dep(name = "bazel_skylib", version = "1.4.2")

## Dependencies: Native
bazel_dep(name = "fmt", version = "9.1.0")
bazel_dep(name = "grpc", version = "1.48.1")
bazel_dep(name = "jsonnet", version = "0.20.0")
bazel_dep(name = "rapidjson", version = "1.1.0")
bazel_dep(name = "sqlite3", version = "3.42.0")
bazel_dep(name = "boringssl", version = "0.0.0-20211025-d4f1ab9")
bazel_dep(name = "zstd-jni", version = "1.5.2-3")

## Dependencies: Tools
bazel_dep(name = "stardoc", version = "0.5.6", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "6.1.2", dev_dependency = True)

################################################################################
# rules_jvm_external
################################################################################

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.artifact(
    artifact = "guava",
    group = "com.google.guava",
    version = "31.1-jre",
)

maven.install(
    repositories = [
        "https://maven.pkg.st",
        "https://gradle.pkg.st",
        "https://repo.gradle.org/gradle/libs-releases",
    ],
    artifacts = [
        "dev.elide:elide-core:1.0-v3-alpha3-b7",
        "org.gradle:gradle-tooling-api:8.2.1",
        "org.slf4j:slf4j-simple:1.7.10",
    ],
    lock_file = "//:maven_install.json",
)

use_repo(
    maven,
    "maven",
    "unpinned_maven",
)

################################################################################
# rules_js
################################################################################

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    npmrc = "//:.npmrc",
)

use_repo(npm, "npm")

################################################################################
# rules_ts
################################################################################

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)

rules_ts_ext.deps()

use_repo(rules_ts_ext, "npm_typescript")

################################################################################
# rules_go
################################################################################

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture.
go_sdk.download(
    version = "1.20.6",
)
