#
# Copyright (c) 2024 Elide Technologies, Inc.
#
# Licensed under the MIT license (the "License"); you may not use this file except in compliance
# with the License. You may obtain a copy of the License at
#
# https://opensource.org/license/mit/
#
# Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
# an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under the License.
#

[package]
name = "base"
edition = "2021"
license = "MIT"
workspace = "../.."
version = "1.0.0-alpha13-SNAPSHOT"

[lib]
crate-type = ["lib"]

[features]
default = ["simd", "alloc", "unsafe"]
alloc = ["base64/alloc", "base64-simd/alloc"]
simd = ["base64-simd/alloc"]
unstable = ["base64-simd/unstable"]
unsafe = []

[dependencies]
arbitrary = { workspace = true }
base64 = { workspace = true }
base64-simd = { workspace = true }
const_fn = { workspace = true }
const_panic = { workspace = true }
crc32fast = { workspace = true }
crc64fast = { workspace = true }
libabort = { workspace = true }
#panic-abort = { workspace = true }
#simdutf = { workspace = true }
smartstring = { workspace = true, default-features = false, features = ["arbitrary", "serde"] }
uuid = { workspace = true }
