#
# Copyright (c) 2024-2025 Elide Technologies, Inc.
#
# Licensed under the MIT license (the "License"); you may not use this file except in compliance
# with the License. You may obtain a copy of the License at
#
# https://opensource.org/license/mit/
#
# Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
# an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under the License.
#

[package]
name = "colide"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "Colide OS native drivers for bare metal VESA, keyboard, and AI integration"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[features]
default = ["jni"]
jni = []
bare-metal = ["x86"]

[build-dependencies]
builder = { workspace = true }

[dependencies]
java_native = { workspace = true }
jni = { workspace = true, default-features = false }
lazy_static = { workspace = true }
heapless = "0.8"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = { version = "0.52", optional = true }
